Fix header spacing

--- a/src/assets/toolkit/styles/partials/_header.scss
+++ b/src/assets/toolkit/styles/partials/_header.scss
@@ -105,6 +105,7 @@ $header-height: 5.3125rem;
     height: 2.125rem;
     display: flex;
     align-items: center;
+    padding-right: .5rem;
   }
 
   &__main {
